# cef-project

./: .clang-format  CMakeLists.txt  vcpkg.json
cefclient/: CMakeLists.txt  cefclient_win.cc
cefclient/browser/: base_client_handler.cc  base_client_handler.h  binary_transfer_test.cc  binary_transfer_test.h  binding_test.cc  binding_test.h  browser_window.cc  browser_window.h  browser_window_osr_win.cc  browser_window_osr_win.h  browser_window_std_win.cc  browser_window_std_win.h  bytes_write_handler.cc  client_app_delegates_browser.cc  client_browser.cc  client_handler.cc  client_handler.h  client_handler_osr.cc  client_handler_osr.h  client_handler_std.cc  client_handler_std.h  client_prefs.cc  default_client_handler.cc  default_client_handler.h  dialog_test.cc  dialog_test.h  hang_test.cc  hang_test.h  image_cache.cc  main_context.h  main_context_impl.cc  main_context_impl.h  main_context_impl_win.cc  main_message_loop_multithreaded_win.cc  main_message_loop_multithreaded_win.h  media_router_test.cc  media_router_test.h  osr_accessibility_helper.cc  osr_accessibility_node.cc  osr_accessibility_node_win.cc  (+50 more)
cefclient/common/: scheme_test_common.cc
cefclient/renderer/: client_app_delegates_renderer.cc  client_renderer.cc  ipc_performance_test.cc  performance_test.cc  performance_test_tests.cc
cefclient/win/: cefclient.rc
shared/browser/: client_app_browser.cc  client_app_browser.h  main_message_loop_external_pump_win.cc  resource_util_win.cc  util_win.cc
shared/common/: client_switches.cc
src/: Browser.cpp  Browser.hpp  CMakeLists.txt  Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp  WindowDelegate.cpp  WindowDelegate.hpp  main.cpp  resource.rc
src/win/: shared.rc
